--- a/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
@@ -7,8 +7,8 @@
     <div id="channelsLatestPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}" data-require="scripts/sections,scripts/channelslatest,paperbuttonstyle">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active latestChannelItemsTab"><i class="material-icons">new_releases</i>${TabLatest}</a>
-            <a href="channels.html"><i class="material-icons">live_tv</i>${TabChannels}</a>
+            <a href="#" class="ui-btn-active latestChannelItemsTab"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
+            <a href="channels.html"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
         </div>
 
         <div data-role="content">
