--- a/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvshows.html
@@ -6,14 +6,14 @@
 <body>
     <div id="tvShowsPage" data-role="page" class="page libraryPage" data-require="scripts/tvshows,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
-            <a href="tvlatest.html"><i class="material-icons">new_releases</i>${TabLatest}</a>
-            <a href="tvupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
-            <a href="#" class="ui-btn-active"><i class="material-icons">live_tv</i>${TabShows}</a>
-            <a href="episodes.html" class="tvEpisodesTab"><i class="material-icons">slideshow</i>${TabEpisodes}</a>
-            <a href="tvgenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
-            <a href="tvpeople.html" class="tvPeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
-            <a href="tvstudios.html" class="tvStudiosTab"><i class="material-icons">account_box</i>${TabNetworks}</a>
+            <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+            <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
+            <a href="tvupcoming.html"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
+            <a href="#" class="ui-btn-active"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
+            <a href="episodes.html" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
+            <a href="tvgenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
+            <a href="tvpeople.html" class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
         </div>
         <div class="alphabetPicker">
         </div>
