--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -9,16 +9,16 @@
 
         <div class="libraryViewNav libraryViewNavWithMinHeight">
             <paper-tabs style="display:none;">
-                <paper-tab><i class="material-icons">home</i>${TabHome}</paper-tab>
-                <paper-tab><i class="material-icons">navigate_next</i>${TabNextUp}</paper-tab>
-                <paper-tab><i class="material-icons">favorite</i>${TabFavorites}</paper-tab>
-                <paper-tab><i class="material-icons">schedule</i>${TabUpcoming}</paper-tab>
+                <paper-tab><iron-icon icon="home"></iron-icon>${TabHome}</paper-tab>
+                <paper-tab><iron-icon icon="navigate-next"></iron-icon>${TabNextUp}</paper-tab>
+                <paper-tab><iron-icon icon="favorite"></iron-icon>${TabFavorites}</paper-tab>
+                <paper-tab><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs" style="display:none;">
-                <a href="index.html" class="ui-btn-active"><i class="material-icons">home</i>${TabHome}</a>
-                <a href="index.html?tab=1"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
-                <a href="index.html?tab=2"><i class="material-icons">favorite</i>${TabFavorites}</a>
-                <a href="index.html?tab=3"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+                <a href="index.html" class="ui-btn-active"><iron-icon icon="home"></iron-icon>${TabHome}</a>
+                <a href="index.html?tab=1"><iron-icon icon="navigate-next"></iron-icon>${TabNextUp}</a>
+                <a href="index.html?tab=2"><iron-icon icon="favorite"></iron-icon>${TabFavorites}</a>
+                <a href="index.html?tab=3"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
             </div>
         </div>
 
