--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -7,12 +7,12 @@
     <div id="liveTvSuggestedPage" data-role="page" class="page libraryPage liveTvPage backdropPage globalBackdropPage" data-contextname="${HeaderLiveTv}" data-backdroptype="series,movie" data-require="scripts/livetvsuggested,paperbuttonstyle,livetvcss">
 
         <div class="libraryViewNav">
-            <a href="#" class="ui-btn-active"><i class="material-icons">info</i>${TabSuggestions}</a>
-            <a href="livetvguide.html"><i class="material-icons">grid_on</i>${TabGuide}</a>
-            <a href="livetvchannels.html"><i class="material-icons">live_tv</i>${TabChannels}</a>
-            <a href="livetvrecordings.html"><i class="material-icons">slideshow</i>${TabRecordings}</a>
-            <a href="livetvtimers.html"><i class="material-icons">schedule</i>${TabScheduled}</a>
-            <a href="livetvseriestimers.html"><i class="material-icons">refresh</i>${TabSeries}</a>
+            <a href="#" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+            <a href="livetvguide.html"><iron-icon icon="grid-on"></iron-icon>${TabGuide}</a>
+            <a href="livetvchannels.html"><iron-icon icon="live-tv"></iron-icon>${TabChannels}</a>
+            <a href="livetvrecordings.html"><iron-icon icon="slideshow"></iron-icon>${TabRecordings}</a>
+            <a href="livetvtimers.html"><iron-icon icon="schedule"></iron-icon>${TabScheduled}</a>
+            <a href="livetvseriestimers.html"><iron-icon icon="refresh"></iron-icon>${TabSeries}</a>
         </div>
         <div data-role="content">
             <div class="ehsContent">
