--- a/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviepeople.html
@@ -7,13 +7,13 @@
     <div id="moviePeoplePage" data-role="page" class="page libraryPage" data-require="scripts/moviepeople">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="moviesrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
-            <a href="movies.html"><i class="material-icons">local_movies</i>${TabMovies}</a>
-            <a href="movietrailers.html" class="movieTrailersTab"><i class="material-icons">movie</i>${TabTrailers}</a>
-            <a href="collections.html?context=movies"><i class="material-icons">video_library</i>${TabCollections}</a>
-            <a href="moviegenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
-            <a href="#" class="ui-btn-active"><i class="material-icons">people</i>${TabPeople}</a>
-            <a href="moviestudios.html" class="movieStudiosTab"><i class="material-icons">account_box</i>${TabStudios}</a>
+            <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+            <a href="movies.html"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
+            <a href="movietrailers.html" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
+            <a href="collections.html?context=movies"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
+            <a href="moviegenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
+            <a href="#" class="ui-btn-active"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
+            <a href="moviestudios.html" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
         </div>
 
         <div class="alphabetPicker">
