--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -7,7 +7,7 @@
     <div id="mySyncActivityPage" data-role="page" class="page libraryPage syncActivityPage mySyncPage" data-contextname="${TitleSync}" data-require="scripts/syncactivity,scripts/taskbutton">
 
         <div class="libraryViewNav">
-            <a href="#" class="ui-btn-active"><i class="material-icons">refresh</i>${TabSyncJobs}</a>
+            <a href="#" class="ui-btn-active"><iron-icon icon="refresh"></iron-icon>${TabSyncJobs}</a>
         </div>
 
         <div data-role="content">
