--- a/MediaBrowser.WebDashboard/dashboard-ui/photos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/photos.html
@@ -7,9 +7,9 @@
     <div id="photosPage" data-role="page" class="page libraryPage" data-require="scripts/photos,scripts/queryfilters">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="photos.html" class="ui-btn-active lnkPhotoAlbums"><i class="material-icons">photo_album</i>${TabAlbums}</a>
-            <a href="photos.html?context=photos-photos" class="lnkPhotos"><i class="material-icons">photo</i>${TabPhotos}</a>
-            <a href="photos.html?context=photos-videos" class="lnkVideos"><i class="material-icons">videocam</i>${TabVideos}</a>
+            <a href="photos.html" class="ui-btn-active lnkPhotoAlbums"><iron-icon icon="photo-album"></iron-icon>${TabAlbums}</a>
+            <a href="photos.html?context=photos-photos" class="lnkPhotos"><iron-icon icon="photo"></iron-icon>${TabPhotos}</a>
+            <a href="photos.html?context=photos-videos" class="lnkVideos"><iron-icon icon="videocam"></iron-icon>${TabVideos}</a>
         </div>
 
         <div data-role="content">
