--- a/MediaBrowser.WebDashboard/dashboard-ui/songs.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/songs.html
@@ -6,13 +6,13 @@
 <body>
     <div id="songsPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist" data-require="scripts/songs,scripts/queryfilters">
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="musicrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
-            <a href="musicalbums.html"><i class="material-icons">album</i>${TabAlbums}</a>
-            <a href="musicalbumartists.html"><i class="material-icons">music_note</i>${TabAlbumArtists}</a>
-            <a href="musicartists.html" class="musicArtistsTab"><i class="material-icons">music_note</i>${TabArtists}</a>
-            <a href="#" class="ui-btn-active"><i class="material-icons">music_note</i>${TabSongs}</a>
-            <a href="musicgenres.html"><i class="material-icons">library_music</i>${TabGenres}</a>
-            <a href="musicvideos.html"><i class="material-icons">video_library</i>${TabMusicVideos}</a>
+            <a href="musicrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+            <a href="musicalbums.html"><iron-icon icon="album"></iron-icon>${TabAlbums}</a>
+            <a href="musicalbumartists.html"><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</a>
+            <a href="musicartists.html" class="musicArtistsTab"><iron-icon icon="music-note"></iron-icon>${TabArtists}</a>
+            <a href="#" class="ui-btn-active"><iron-icon icon="music-note"></iron-icon>${TabSongs}</a>
+            <a href="musicgenres.html"><iron-icon icon="library-music"></iron-icon>${TabGenres}</a>
+            <a href="musicvideos.html"><iron-icon icon="video-library"></iron-icon>${TabMusicVideos}</a>
         </div>
         <div data-role="content">
             <div class="viewSettings">
