--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -17,7 +17,7 @@
         </div>
         <div data-role="content">
             <div class="ehsContent">
-                <div id="upcomingItems" class="itemsContainer">
+                <div id="upcomingItems">
                 </div>
                 <div class="noItemsMessage" style="display: none;">
                     <p>${MessageNothingHere}</p>
