--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -57,7 +57,7 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent homeUpcomingTabContent">
-                        <div id="upcomingItems" class="itemsContainer">
+                        <div id="upcomingItems">
                         </div>
                         <div class="noItemsMessage" style="display: none;">
                             <p>${MessageNothingHere}</p>
