update selection buttons

--- a/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/cinemamodeconfiguration.html
@@ -39,6 +39,8 @@
                                 <input type="checkbox" id="chkUpcomingDvdTrailers" />
                                 <label for="chkUpcomingStreamingTrailers">${OptionUpcomingStreamingMovies}</label>
                                 <input type="checkbox" id="chkUpcomingStreamingTrailers" />
+                                <label for="chkOtherTrailers">${OptionOtherTrailers}</label>
+                                <input type="checkbox" id="chkOtherTrailers" />
                             </fieldset>
                             <div class="fieldDescription">${LabelTheseFeaturesRequireSupporterHelpAndTrailers}</div>
                             <div class="fieldDescription"><a class="lnkSupporterLearnMore" href="supporter.html" style="display:none;">${ButtonLearnMore}</a></div>
