--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -458,7 +458,7 @@
         </div>
         <div data-role="content">
         </div>
-        <div data-role="popup" class="popupIdentify popup" data-theme="a">
+        <div data-role="popup" class="popupIdentify popupIdentifyItem popup" data-theme="a">
 
             <div class="ui-bar-a" style="text-align: center; padding: 0 20px; position: relative;">
 
@@ -617,7 +617,7 @@
             </div>
         </div>
 
-        <div data-role="popup" class="popupIdentifyCollection popup" data-theme="a">
+        <div data-role="popup" class="popupIdentifyCollection popup popupIdentify" data-theme="a">
 
             <div class="ui-bar-a" style="text-align: center; padding: 0 20px;">
                 <h3>
