--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -28,7 +28,7 @@
                             <form class="editItemMetadataForm editMetadataForm">
                                 <div class="metadataFormFields">
 
-                                    <div style="margin:2em 0 .5em;">
+                                    <div style="margin:2em 0 .5em;text-align:center;">
 
                                         <paper-button raised class="submit">
                                             <button class="btnSave clearButton" type="submit" data-role="none" style="display:inline-block;">
@@ -426,7 +426,7 @@
                     </neon-animatable>
                     <neon-animatable>
                         <div class="editorTab imageEditorTab">
-                            <div style="margin:2em 0 .5em;">
+                            <div style="margin:2em 0 .5em;text-align:center;">
 
                                 <paper-button raised class="subdued btnBrowseAllImages"><iron-icon icon="cloud"></iron-icon><span>${ButtonBrowseImages}</span></paper-button>
                                 <paper-button raised class="subdued btnOpenUploadMenu"><iron-icon icon="add"></iron-icon><span>${ButtonUpload}</span></paper-button>
