--- a/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/connectlogin.html
@@ -56,7 +56,7 @@
                 <br />
                 <div>
                     <label for="txtServerPort" style="text-align: left;">${LabelServerPort}</label>
-                    <input type="number" id="txtServerPort" step="1" min="0" />
+                    <input type="number" id="txtServerPort" step="1" min="0" value="8096" />
                 </div>
                 <br />
 
