start pulling in EmbyTV

--- a/MediaBrowser.WebDashboard/dashboard-ui/channels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channels.html
@@ -20,7 +20,7 @@
             <neon-animated-pages>
                 <neon-animatable>
                     <div class="pageTabContent latestContent">
-                        <div class="latestItems items"></div>
+                        <div class="latestItems"></div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
