--- a/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itembynamedetails.html
@@ -5,117 +5,7 @@
 </head>
 <body>
 
-    <div id="itemByNameDetailPage" data-role="page" class="page libraryPage itemDetailPage backdropPage" data-require="scripts/itembynamedetailpage">
-        <div id="movieGenreTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="movies.html"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
-                <a href="movietrailers.html" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
-                <a href="collections.html?context=movies"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
-                <a href="moviegenres.html" class="ui-btn-active"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="moviepeople.html" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="moviestudios.html" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
-            </div>
-        </div>
-        <div id="moviePeopleTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="movies.html"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
-                <a href="movietrailers.html" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
-                <a href="collections.html?context=movies"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
-                <a href="moviegenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="moviepeople.html" class="ui-btn-active moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="moviestudios.html" class="movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
-            </div>
-        </div>
-        <div id="movieStudioTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="moviesrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="movies.html"><iron-icon icon="local-movies"></iron-icon>${TabMovies}</a>
-                <a href="movietrailers.html" class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</a>
-                <a href="collections.html?context=movies"><iron-icon icon="video-library"></iron-icon>${TabCollections}</a>
-                <a href="moviegenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="moviepeople.html" class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="moviestudios.html" class="ui-btn-active movieStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabStudios}</a>
-            </div>
-        </div>
-        <div id="tvGenreTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
-                <a href="tvupcoming.html"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
-                <a href="tvshows.html"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
-                <a href="episodes.html" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
-                <a href="tvgenres.html" class="ui-btn-active"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="tvpeople.html" class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="tvstudios.html" class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
-            </div>
-        </div>
-        <div id="tvPeopleTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
-                <a href="tvupcoming.html"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
-                <a href="tvshows.html"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
-                <a href="episodes.html" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
-                <a href="tvgenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="tvpeople.html" class="ui-btn-active tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="tvstudios.html" class="tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
-            </div>
-        </div>
-        <div id="tvStudioTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="tvlatest.html"><iron-icon icon="new-releases"></iron-icon>${TabLatest}</a>
-                <a href="tvupcoming.html"><iron-icon icon="schedule"></iron-icon>${TabUpcoming}</a>
-                <a href="tvshows.html"><iron-icon icon="live-tv"></iron-icon>${TabShows}</a>
-                <a href="episodes.html" class="tvEpisodesTab"><iron-icon icon="slideshow"></iron-icon>${TabEpisodes}</a>
-                <a href="tvgenres.html"><iron-icon icon="video-library"></iron-icon>${TabGenres}</a>
-                <a href="tvpeople.html" class="tvPeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</a>
-                <a href="tvstudios.html" class="ui-btn-active tvStudiosTab"><iron-icon icon="account-box"></iron-icon>${TabNetworks}</a>
-            </div>
-        </div>
-        <div id="musicGenreTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="musicalbums.html"><iron-icon icon="album"></iron-icon>${TabAlbums}</a>
-                <a href="musicalbumartists.html"><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="musicArtistsTab"><iron-icon icon="music-note"></iron-icon>${TabArtists}</a>
-                <a href="songs.html" class="musicSongsTab"><iron-icon icon="music-note"></iron-icon>${TabSongs}</a>
-                <a href="musicgenres.html" class="ui-btn-active"><iron-icon icon="library-music"></iron-icon>${TabGenres}</a>
-                <a href="musicvideos.html"><iron-icon icon="video-library"></iron-icon>${TabMusicVideos}</a>
-            </div>
-        </div>
-        <div id="artistTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-                <a href="musicalbums.html"><iron-icon icon="album"></iron-icon>${TabAlbums}</a>
-                <a href="musicalbumartists.html"><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="ui-btn-active musicArtistsTab"><iron-icon icon="music-note"></iron-icon>${TabArtists}</a>
-                <a href="songs.html" class="musicSongsTab"><iron-icon icon="music-note"></iron-icon>${TabSongs}</a>
-                <a href="musicgenres.html"><iron-icon icon="library-music"></iron-icon>${TabGenres}</a>
-                <a href="musicvideos.html"><iron-icon icon="video-library"></iron-icon>${TabMusicVideos}</a>
-            </div>
-        </div>
-        <div id="gameGenreTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggestions}</a>
-                <a href="games.html">${TabGames}</a>
-                <a href="gamesystems.html">Game Systems</a>
-                <a href="gamegenres.html" class="ui-btn-active">${TabGenres}</a>
-                <a href="gamestudios.html">${TabStudios}</a>
-            </div>
-        </div>
-        <div id="gameStudioTabs" class="itemTabs" style="display: none;">
-            <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="gamesrecommended.html">${TabSuggestions}</a>
-                <a href="games.html">${TabGames}</a>
-                <a href="gamesystems.html">Game Systems</a>
-                <a href="gamegenres.html">${TabGenres}</a>
-                <a href="gamestudios.html" class="ui-btn-active">${TabStudios}</a>
-            </div>
-        </div>
-
+    <div id="itemByNameDetailPage" data-role="page" class="page libraryPage itemDetailPage backdropPage noSecondaryNavPage" data-require="scripts/itembynamedetailpage" data-backbutton="true" data-menubutton="false">
         <div style="padding: 1em 0;">
             <table class="detailPageContent primaryDetailPageContent">
                 <tr>
