completed tuner hosts

--- a/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/addplugin.html
@@ -19,9 +19,10 @@
                     <a href="syncsettings.html" data-role="button">${TabSettings}</a>
                 </div>
                 <div data-role="controlgroup" data-type="horizontal" class="localnav livetvTabs" data-mini="true" style="display:none;">
-                    <a href="livetvstatus.html" data-role="button">${TabStatus}</a>
-                    <a href="#" data-role="button" class="ui-btn-active">${TabServices}</a>
+                    <a href="livetvstatus.html" data-role="button">${TabTuners}</a>
+                    <a href="#" data-role="button">${TabGuide}</a>
                     <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
+                    <a href="#" data-role="button" class="ui-btn-active">${TabExternalServices}</a>
                 </div>
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav notificationsTabs" data-mini="true" style="display:none;">
