--- a/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
@@ -18,9 +18,11 @@
                 </div>
                 <div class="sectionTabs livetvSectionTabs" style="display:none;">
                     <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
-                        <a href="livetvstatus.html" data-role="button">${TabStatus}</a>
-                        <a href="#" data-role="button" class="ui-btn-active">${TabServices}</a>
+
+                        <a href="livetvstatus.html" data-role="button">${TabTuners}</a>
+                        <a href="#" data-role="button">${TabGuide}</a>
                         <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
+                        <a href="#" data-role="button" class="ui-btn-active">${TabExternalServices}</a>
                     </div>
                 </div>
 
