--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -10,9 +10,10 @@
             <div class="content-primary">
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
-                    <a href="livetvstatus.html" data-role="button">${TabStatus}</a>
-                    <a href="appservices.html?context=livetv" data-role="button">${TabServices}</a>
+                    <a href="livetvstatus.html" data-role="button">${TabTuners}</a>
+                    <a href="#" data-role="button">${TabGuide}</a>
                     <a href="#" data-role="button" class="ui-btn-active">${TabSettings}</a>
+                    <a href="appservices.html?context=livetv" data-role="button">${TabExternalServices}</a>
                 </div>
 
                 <form class="liveTvSettingsForm" style="display: none;">
@@ -36,7 +37,7 @@
                                 <option value="12">12</option>
                                 <option value="13">13</option>
                                 <option value="14">14</option>
-                           </select>
+                            </select>
                             <div class="fieldDescription">${LabelNumberOfGuideDaysHelp}</div>
                         </li>
                     </ul>
