update live tv setup

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
@@ -11,7 +11,7 @@
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="#" data-role="button" class="ui-btn-active">${TabTuners}</a>
-                    <a href="#" data-role="button">${TabGuide}</a>
+                    <a href="livetvguidesettings.html" data-role="button">${TabGuide}</a>
                     <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
                     <a href="appservices.html?context=livetv" data-role="button">${TabExternalServices}</a>
                 </div>
