--- a/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/appservices.html
@@ -20,7 +20,7 @@
                     <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
 
                         <a href="livetvstatus.html" data-role="button">${TabTuners}</a>
-                        <a href="#" data-role="button">${TabGuide}</a>
+                        <a href="livetvguidesettings.html" data-role="button">${TabGuide}</a>
                         <a href="livetvsettings.html" data-role="button">${TabSettings}</a>
                         <a href="#" data-role="button" class="ui-btn-active">${TabExternalServices}</a>
                     </div>
