--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -11,12 +11,11 @@
 
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="livetvstatus.html" data-role="button">${TabTuners}</a>
-                    <a href="livetvguidesettings.html" data-role="button">${TabGuide}</a>
                     <a href="#" data-role="button" class="ui-btn-active">${TabSettings}</a>
                     <a href="appservices.html?context=livetv" data-role="button">${TabExternalServices}</a>
                 </div>
 
-                <form class="liveTvSettingsForm" style="display: none;">
+                <form class="liveTvSettingsForm">
 
                     <ul data-role="listview" class="ulForm">
                         <li>
@@ -61,13 +60,6 @@
                     </ul>
 
                 </form>
-                <div class="noLiveTvServices" style="display: none;">
-                    <div class="readOnlyContent" style="margin-top: 2em;">
-                        <p>${LiveTvPluginRequired}</p>
-
-                        <p><a href="plugincatalog.html">${LiveTvPluginRequiredHelp}</a></p>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
