update tv guide

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsettings.html
@@ -47,6 +47,15 @@
                             <input type="checkbox" id="chkMovies" />
                         </fieldset>
                     </div>
+                    <div>
+                        <br />
+                        <label for="txtRecordingPath">${LabelRecordingPath}</label>
+                        <div style="display: inline-block; width: 85%;">
+                            <input type="text" id="txtRecordingPath" />
+                        </div>
+                        <button id="btnSelectRecordingPath" type="button" data-icon="search" data-iconpos="notext" data-inline="true">${ButtonSelectDirectory}</button>
+                        <div class="fieldDescription">${LabelRecordingPathHelp}</div>
+                    </div>
                     <br />
                     <br />
                     <ul data-role="listview" class="ulForm">
