--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvstatus.html
@@ -66,7 +66,7 @@
                         <p><a href="plugincatalog.html">${LiveTvPluginRequiredHelp}</a></p>
                     </div>
 
-                    <paper-dialog class="dlgAddDevice" entry-animation="fade-in-animation" exit-animation="fade-out-animation" style="height:300px;width:250px;" with-backdrop>
+                    <paper-dialog class="dlgAddDevice" entry-animation="fade-in-animation" exit-animation="fade-out-animation" style="height:500px;width:300px;" with-backdrop>
                         <h2>${HeaderAddDevice}</h2>
 
                         <form class="formAddDevice">
@@ -77,6 +77,8 @@
                                         <option value="hdhomerun">HD Homerun</option>
                                         <option value="m3u">M3U</option>
                                     </select>
+                                    <div class="fieldDescription">${MessageTunerDeviceNotListed}</div>
+                                    <div class="fieldDescription"><a href="appservices.html?context=livetv">${TabExternalServices}</a></div>
                                 </div>
                                 <div>
                                     <br />
