update ScheduleDirect help text

--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
@@ -18,7 +18,7 @@
                 <div class="readOnlyContent" style="margin-top: 2em;">
 
                     <h1>Schedules Direct</h1>
-
+                    <p class="createAccountHelp"></p>
                     <div style="background-color:rgba(82,181,75,.8);color:#fff;padding:.7em 1em;font-size:16px;border-radius:4px;">
                         ${GuideProviderLoginStep}
                     </div>
